--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,8 +68,13 @@ jobs:
   flake8:
     strategy:
       matrix:
-        python: ['2.7']
+        python: ['2.7', '3.5', '3.6', '3.7', '3.8', '3.9', '3.10']
         os: ['ubuntu-latest']
+        include:
+          - python: '3.3'
+            os: 'ubuntu-18.04'
+          - python: '3.4'
+            os: 'ubuntu-18.04'
     name: Run flake8
     runs-on: ${{ matrix.os }}
     steps:
