Install graphviz for t12_api:GraphAPITest
Signed-off-by: You-Sheng Yang <vicamo@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,6 +119,11 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r system/requirements.txt
+
+          sudo apt-get update --quiet
+          sudo apt-get install --no-install-recommends --yes \
+              graphviz \
+              ;
       - name: Move testing artifacts in position
         env:
           APTLY_VERSION: ${{ needs.build.outputs.version }}
